--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,9 +22,14 @@ jobs:
       run: python update_counter.py
 
     - name: Commit and push changes
+      env:
+        TOKEN: ${{ secrets.PERSONAL_TOKEN }}
       run: |
-        git config user.name "github-actions"
-        git config user.email "github-actions@github.com"
+        git config user.name "Eric Tech"
+        git config user.email "erictech.et@gmail.com"
+
         git add counter.txt
-        git commit -m "Automated counter update"
-        git push
+        git diff --cached --quiet || git commit -m "Automated counter update"
+
+        git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
+        git push origin HEAD:${{ github.ref_name }}
