--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,7 +25,7 @@ jobs:
       env:
         TOKEN: ${{ secrets.PERSONAL_TOKEN }}
       run: |
-        git config user.name "Eric Tech"
+        git config user.name "ettechh"
         git config user.email "erictech.et@gmail.com"
 
         git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
