--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Set up GitHub credentials
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "ettechh"
+          git config user.email "erictech.et@gmail.com"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/ettechh/counter-bot.git
 
       - name: Set up Python
